--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Build project
         run: npm run build
         env:
+          PUBLIC_URL: /${{ github.event.repository.name }}
           CI: false 
 
       # Upload static files for deployment
