--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-website",
-  "homepage": "https://stha4us.github.io/my-website/",
+  "homepage": "https://utsabshrestha.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
